update js,html with profit loss

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <h1>Stocks profit and loss</h1>
     <main>
         <label for="initial-price">Initial Price
-            <input id="initial-price"    placeholder="Enter Initial Price Here" type="text">
+            <input id="initial-price"    placeholder="Enter Initial Price Here" type="number">
         </label>
-        <label for="stocks-price">Quantity Of Stocks
-            <input  id="stocks-price" placeholder="Enter the Number of Stocks Bought" type="text">
+        <label for="stocks-quantity">Quantity Of Stocks
+            <input  id="stocks-quantity" placeholder="Enter the Number of Stocks Bought" type="number">
         </label>
         <label for="current-price">Current Price
-            <input id="current-price" placeholder="Enter the Current Price of the Stocks" type="text">
+            <input id="current-price" placeholder="Enter the Current Price of the Stocks" type="number">
         </label>
         <button id="submit-btn">Tell Me!</button>
         <div id="output-box"></div>
     </main>
-
+<script src="app.js" type="text/javascript"></script>
 </body>
 
 </html>
