--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Stocks profit and loss</h1>
-    <main>
+    <main id="main">
         <label for="initial-price">Initial Price
             <input id="initial-price"    placeholder="Enter Initial Price Here" type="number">
         </label>
@@ -25,6 +25,16 @@
         <div id="output-box"></div>
     </main>
 <script src="app.js" type="text/javascript"></script>
+
+<footer>
+
+    
+</footer>
+
+
+
+
+
 </body>
 
 </html>
