--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark-14-stocks</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -27,14 +28,18 @@
 <script src="app.js" type="text/javascript"></script>
 
 <footer>
+   <section class="footer">
+   <div class="social">
+    <a href="https://www.instagram.com/shivanisonii__/"><i class="fab fa-instagram"></i></a>
+    <a href="https://github.com/shivaniss24"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/shivani-soni-93720b150/"><i class="fab fa-linkedin"></i></a>
+    <!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
+   </div>
+   <div class="copyright">2022 | Shivani soni</div>
+</section>
 
-    
+
 </footer>
-
-
-
-
-
 </body>
 
 </html>
