--- a/index.html
+++ b/index.html
@@ -26,20 +26,22 @@
         <div id="output-box"></div>
     </main>
 <script src="app.js" type="text/javascript"></script>
-
-<footer>
-   <section class="footer">
-   <div class="social">
-    <a href="https://www.instagram.com/shivanisonii__/"><i class="fab fa-instagram"></i></a>
-    <a href="https://github.com/shivaniss24"><i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/shivani-soni-93720b150/"><i class="fab fa-linkedin"></i></a>
-    <!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
-   </div>
-   <div class="copyright">2022 | Shivani soni</div>
-</section>
+ <!-- footer -->
+ <footer>
+    <section class="footer">
+        <div class="social">
+            <a href="https://www.instagram.com/shivanisonii__/"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/shivaniss24"><i class="fab fa-github"></i></a>
+            <a href="https://hashnode.com/@Shivanisoni24"><i class="fab fa-hashnode"></i>
+                <a href="https://www.linkedin.com/in/shivani-soni-93720b150/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://twitter.com/Shivanisoni24"><i class="fab fa-twitter"></i></a>
+        </div>
+        <div class="copyright">2022 | Shivani soni</div>
+    </section>
 
 
 </footer>
+
 </body>
 
 </html>
